<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/register"

        android:textAlignment="center"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tv_regdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"

        android:text="@string/tag"
        android:textSize="17sp"
        android:translationX="115dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"

        android:padding="15dp"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:padding="15dp"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"

        android:padding="15dp"

        android:textSize="15sp" />




    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_repassword"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"

        android:textColor="@android:color/white"
        android:text="@string/register"/>


    <TextView
        android:id="@+id/tv_alreadyReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/already_registered"
        android:textAlignment="center" />


</LinearLayout>